--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ministerstvo spravedlnosti pokyny pro dodavatele
+title: Pokyny Ministerstvo spravedlnosti pro dodavatele
 
 permalink: pretty
 
