content: pridana paticka, fix preklepy

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,8 @@ defaults:
       path: "principles"
     values:
       principle: true
+  -
+    scope:
+      path: "designpatterns"
+    values:
+      pattern: true
